--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/terminus": "^9.1.4",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/passport-google-oauth20": "^2.0.11",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "joi": "^17.7.0",
@@ -41,7 +42,7 @@
     "passport-jwt": "^4.0.0",
     "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
-    "passport-naver": "^1.0.6",
+    "passport-naver-v2": "^2.0.8",
     "redis": "^4.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -57,11 +58,9 @@
     "@types/jest": "28.1.4",
     "@types/node": "^16.0.0",
     "@types/passport": "^1.0.11",
-    "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-kakao": "^1.0.0",
     "@types/passport-local": "^1.0.34",
-    "@types/passport-naver": "^1.0.1",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
