chore(Add user paths tsconfig.json):

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,9 @@
       ],
       "@auth/*": [
         "./auth/*"
+      ],
+      "@user/*": [
+        "./user/*"
       ]
     },
     "incremental": true,
