--- a/package.json
+++ b/package.json
@@ -82,20 +82,32 @@
     "typescript": "^4.3.5"
   },
   "jest": {
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
     "moduleFileExtensions": [
       "js",
       "json",
       "ts"
     ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
+    "roots": [
+      "src"
+    ],
+    "testRegex": ".spec.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^@user/(.*)": "<rootDir>/src/user/$1",
+      "^@auth/(.*)": "<rootDir>/src/auth/$1",
+      "^@common/(.*)": "<rootDir>/src/common/$1",
+      "^@config/(.*)": "<rootDir>/src/config/$1",
+      "^@app/(.*)": "<rootDir>/src/app/$1",
+      "^@utils/(.*)": "<rootDir>/src/utils/$1",
+      "^@middleware/(.*)": "<rootDir>/src/middleware/$1"
+    }
   }
 }
