--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 
 /node_modules
 
-src/config/.env.local
+src/common/config/.env.local
 .env
 *.env
 *.env.*
@@ -363,7 +363,7 @@ web_modules/
 .env.development.local
 .env.test.local
 .env.production.local
-src/config/.env.local
+src/common/config/.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
